Ended "Метаданные о транзакциях"
Ended a part of "3.2.3 Логическая структура словаря данных" named "Метаданные о транзакциях"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1164,14 +1164,54 @@
     url={https://www.postgresql.org/docs/current/catalogs.html}
 }
 
+@online{PostgreSQLdocc52,
+    title={PostgreSQL Documentation. Chapter 52. System views},
+    url={https://www.postgresql.org/docs/current/views.html}
+}
+
+@online{PostgreSQLdocc3p4,
+    title={PostgreSQL Documentation. Chapter 3. Advanced Features. P.3.4. Transactions},
+    url={https://www.postgresql.org/docs/current/tutorial-transactions.html}
+}
+
+@online{PostgreSQLdocc27,
+    title={PostgreSQL Documentation. Chapter 27. Monitoring Database Activity},
+    url={https://www.postgresql.org/docs/current/monitoring.html}
+}
+
+@online{PostgreSQLdocc28,
+    title={PostgreSQL Documentation. Chapter 28. Reliability and the Write-Ahead Log. Part III. Server Administration},
+    url={https://www.postgresql.org/docs/current/wal.html}
+}
+
+@online{PgStatStatements1,
+    title={PostgreSQL Documentation. Appendix F. F.30.},
+    url={https://www.postgresql.org/docs/current/pgstatstatements.html}
+}
+
 @online{HabrDataOrgp1,
     title={PostgreSQL 16. Организация данных. Часть 1},
     url={https://habr.com/ru/articles/813781/}
 }
 
 @online{Mysqldoc1,
-    title={MySQL Documentation. Глава 28},
-    url={https://dev.mysql.com/doc/refman/8.4/en/information-schema.html}
+    title={MySQL 8.0 Reference Manual. Chapter 28},
+    url={https://dev.mysql.com/doc/refman/8.0/en/information-schema.html}
+}
+
+@online{Mysqldoc2,
+    title={MySQL 8.0 Reference Manual. Chapter 29},
+    url={https://dev.mysql.com/doc/refman/8.0/en/performance-schema.html}
+}
+
+@online{Mysqldoc3,
+    title={MySQL 8.0 Reference Manual. MySQL Server Logs},
+    url={https://dev.mysql.com/doc/refman/8.0/en/binary-log.html}
+}
+
+@online{OracleRedoLog,
+    title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
+    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
 }
 
 @online{YTcoursepostgre,
@@ -1195,23 +1235,38 @@
 }
 
 @online{MicrosoftLearnSQLserver,
-    title={Представления системного каталога (Transact-SQL)},
+    title={Microsoft SQL Server. Представления системного каталога (Transact-SQL)},
     url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverInd,
-    title={Indexes},
+    title={Microsoft SQL Server. Indexes},
     url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTab,
-    title={Tables},
+    title={Microsoft SQL Server. Tables},
     url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverPerm,
-    title={Get started with Database Engine permissions},
+    title={Microsoft SQL Server. Get started with Database Engine permissions},
     url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverTransLog,
+    title={Microsoft SQL Server. The transaction log},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/logs/the-transaction-log-sql-server?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverQueryStat,
+    title={Microsoft SQL Server.},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-query-stats-transact-sql?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverTranLocks,
+    title={Microsoft SQL Server.},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16}
 }
 
 @online{oracledbdoc1,
