--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -53,7 +53,7 @@
 Говоря более простым языком: 
 Если \textbf{данные} — то, что хранится в базе данных приложения (данные о клиентах, пользователях, заказах и т.п.), то \textbf{метаданные} — это описание структуры данных. Описание того, какие типы объектов хранятся в базе данных, какие у них есть поля (атрибуты, элементы), описание зависимостей между объектами. В общем случает типы могут наследовать атрибуты родительского типа, а один атрибут в общем случае может присутствовать у двух и более типов, несвязанных отношением наследования \autocite{Metadatahabr}.
 
-\paragraph{Назначение словаря данных} ~\\
+\subsubsection{Назначение словаря данных} ~\\
 
 Согласно реляционной модели данных, информация о структуре базы данных должна храниться в самой базе данных, в виде специальных таблиц. Это требование описано в 4-м правиле Кодда (Dynamic On-Line Catalog Based on the Relational Model), согласно которому СУБД должна автоматически управлять метаданными и обеспечивать их доступность через стандартные средства запросов.
 
@@ -67,7 +67,7 @@
 
 В \textbf{SQL-92} была стандартизирована структура системного каталога, а точнее представления, объединенные в схему \texttt{INFORMATION\_SCHEMA}. Эта штука в какой-то степени развязала руки разработчикам писать универсальные запросы для получения информации о таблицах, индексах, ограничениях и других объектах БД вне зависимости от конкретной СУБД. Однако на момент принятия стандарта, многие СУБД уже использовали собственные форматы каталогов, и их переход на \texttt{INFORMATION\_SCHEMA} оказался затруднительным.
 
-\paragraph{Реализация системных каталогов в разных СУБД}
+\subsubsection{Реализация системных каталогов в разных СУБД}
 
 Реализация и организация системных каталогов отличаются в зависимости от СУБД.
 
@@ -208,15 +208,17 @@
     
 \end{enumerate}
 
-\paragraph{Логическая структура словаря данных} \autocite{PostgreSQLdocc51,ElmasriNavathe,Silberschatz}
+\subsubsection{Логическая структура словаря данных}
 
-Логическая структура словаря данных включает в себя:
+Логическая структура словаря данных \autocite{PostgreSQLdocc51,ElmasriNavathe,Silberschatz} включает в себя:
 
-\begin{itemize}
+\begin{enumerate}
     \item Описание структуры объектов базы данных (информация о таблицах, индексах, ограничениях, связях между объектами БД)
     \item Метаданные о транзакциях (сведения о выполняемых операциях, механизах блокировок, истории SQL-запросов)
     \item Статистику работы системы (данные о производительности, статистике выполнения запросов, параметрах конфигурации СУБД)
-\end{itemize}
+\end{enumerate}
+
+Далее (через страницу) последовательно будут рассмотрены каждый из этих пунктов
 
 Также важно надо понимать разницу между \textbf{логической} и \textbf{физической} структурой словаря данных:
 
@@ -270,7 +272,9 @@
 
 Ну то есть суть в том, что использование вендор-зависимых требует всяких специфических знаний конкретной платформы.
 
-\subparagraph{Основные объекты, хранящиеся в словаре данных} ~\\
+Итак, перейдем к рассмотрению указанных ранее пунктов:
+
+\paragraph{Основные объекты, хранящиеся в словаре данных} ~\\
 
 \begin{enumerate}
 
@@ -427,6 +431,127 @@
 
 \end{enumerate}
 
+\paragraph{Метаданные о транзакциях} ~\\
+
+\begin{grayquote}
+    \textbf{Транзакция} - это исполняемая программа, включающая в себя определенные операции с базой данных, такие как чтение из базы данных, применение вставок, удалений или обновлений к базе данных \autocite{ElmasriNavathe}
+\end{grayquote}
+
+Основной смысл транзакций заключается в в объединении нескольких операций в одно неделимое действие. Промежуточные состояния между шагами транзакции невидимы для других параллельно выполняющихся транзакций. Если происходит сбой, не позволяющий транзакции завершиться, то никакие изменения базу данных не затрагивают — все шаги откатываются. \autocite{PostgreSQLdocc3p4}
+
+Соответственно, \textbf{метаданные о транзакциях} — это информация, фиксируемая СУБД в процессе выполнения транзакций. Они позволюят отслеживать историю изменений, анализтровать работу БД и обеспечивать контроль целостности данных. В словаре данных хранятся в виде специальных системных таблиц и представлений, которые содержат информацию о выполняемых операциях, механизах блокировок, истории SQL-запросов.
+
+\subparagraph{Журнылы операций} ~\\
+
+\textbf{Журналы операций} фиксируют информацию о транзацкиях выполняемых в СУБЬД чтобы их можно было было восстановить в случае сбоя (сделать \texttt{ROLLBACK}). Они являются основным источником информации о транзакциях в СУБД. Они фиксируют:
+\begin{itemize}
+    \item Время начала и завершения транзакции
+    \item ID транзакции
+    \item Тип выполняемой операции (INSERT, UPDATE, DELETE, DDL-операции)
+    \item Пользователя, выполнявшего операцию
+    \item Затронутые (повергнувшиеся изменению) таблицы и строки
+    \item Использованные механизмы блокировок
+\end{itemize}
+
+Юзаются они как уже было сказано для отката изменений (\texttt{ROLLBACK}).
+Вот как это реализовано в различных СУБД:
+
+\begin{itemize}
+    \item PostgreSQL: Журналы транзаций хранятся в WAL (Write-Ahead Logging), а информация о транзакциях пишется в \texttt{pg\_xact} и \texttt{pg\_commit\_ts} \autocite{PostgreSQLdocc28}.
+    \item MySQL использует бинарные логи (Binary Log, binlog), который фиксирует события для репликации и востановления. \autocite{Mysqldoc3}. Также есть штука \texttt{performance\_schema.events\_transactions}, которая фиксирует события связанные с выполнением транзакций и хранящяя подробную инфу о них (ID, состояния, временные метки начала и конца, статистику) \autocite{Mysqldoc2}. То есть binlog фиксирует изменения данных для цели репликации, восстановления, а эта штука используется для мониторинга работы транзакций в реальном времени, но не предназначена для восстановления данных. 
+    \item SQL Server: журнал транзакций (Transaction Log), \texttt{sys.dm\_tran\_active\_transactions} \autocite{MicrosoftLearnSQLserverTransLog}.
+    \item Oracle: журналы восстановления (Redo Logs), \texttt{V\textdollar TRANSACTION}, \texttt{V\textdollar LOG} \autocite{OracleRedoLog}.
+\end{itemize}
+
+Пример запроса (PostgreSQL, просмотр текущего состояния WAL-журнала. Как итог получаем текущий LSN (Log Sequence Number) в WAL-журнале. LSN указывает до какого момента были записаны изменения в ужрнале транзакций):
+\begin{lstlisting}[language=SQL]
+    SELECT * FROM pg_current_wal_lsn();                
+\end{lstlisting}
+
+Пример запроса (MySQL, простотр 10 последних записанных в журнал транзакций событий записанных в бинлог):
+\begin{lstlisting}[language=SQL]
+    SHOW BINLOG EVENTS IN 'mysql-bin.000001' LIMIT 10;           
+\end{lstlisting}
+
+\subparagraph{История выполнения SQL-запросов} ~\\
+
+Также многие СУБД ведут \textbf{историю выполненных SQL-запросов}. Она используется для анализа работы системы, поиска узких мест в производительности, аудит безопасности. 
+
+Реализация следующяя:
+\begin{itemize}
+    \item PostgreSQL: история запросов хранится в \texttt{pg\_stat\_statements} \autocite{PgStatStatements1}
+    \item MySQL: используются \texttt{general\_log} и \texttt{slow\_query\_log} \autocite{Mysqldoc3}
+    \item SQL Server: представление \texttt{sys.dm\_exec\_query\_stats} \autocite{MicrosoftLearnSQLserverQueryStat}
+    \item Oracle: динамические представления \texttt{V\textdollar SQL}, \texttt{V\textdollar SQLAREA} \autocite[c.9 §46-49, c.9 §71]{oracledbdoc2}
+\end{itemize}
+
+Пример запроса (PostgreSQL, выводит 5 самых долгих рисурсоемких запросов):
+\begin{lstlisting}[language=SQL]
+    SELECT query, calls, total_exec_time 
+    FROM pg_stat_statements 
+    ORDER BY total_exec_time DESC 
+    LIMIT 5;                 
+\end{lstlisting}
+
+Пример запроса (Oracle, \texttt{V\textdollar SQLAREA}, выборка последних запросов с частотой их выполнения и затратами ресурсов (10 штук запросов)):
+\begin{lstlisting}[language=SQL]
+    SELECT sql_text, executions, 
+        elapsed_time / executions AS avg_exec_time, 
+        disk_reads, buffer_gets 
+    FROM V$SQLAREA 
+    WHERE executions > 0 
+    ORDER BY first_load_time DESC 
+    FETCH FIRST 10 ROWS ONLY;
+\end{lstlisting}
+
+\subparagraph{Информация о блокировакх и параллельном доступе} ~\\
+
+Монгопользоательский доступ требуеи механизмов блркировок для отсутствия ситуации когда происходит одновременная модификация одних и техже данных разными транзакциями. В словаре данных фиксируется информация о:
+\begin{itemize}
+    \item Активных блокировках (\texttt{SHARE}, \texttt{EXCLUSIVE})
+    \item Процессах, ожидающих снятия блокировок
+    \item Возникших взаимоблокировках (deadlocks)
+    \item Длительности удержания блокировки
+    \item Таблицах и строках, находящихся в блокировке
+\end{itemize}
+
+На практике реализоввано следующим образом:
+\begin{itemize}
+    \item PostgreSQL: Информация о блокировках содержится в \texttt{pg\_locks} и \texttt{pg\_stat\_activity} \autocites[§52.12]{PostgreSQLdocc52}[§27.2.3]{PostgreSQLdocc27}
+    \item MySQL: \texttt{performance\_schema.metadata\_locks} \autocite[§29.12.13]{Mysqldoc2}
+    \item SQL Server: используется представление \texttt{sys.dm\_tran\_locks} \autocite{MicrosoftLearnSQLserverTranLocks}
+    \item Oracle: блокировки отслеживаются \texttt{V\textdollar LOCK}, \texttt{DBA\_BLOCKERS}, \texttt{DBA\_WAITERS} \autocites[c.8 §40]{oracledbdoc2}[c.4 §180, c.6 §103]{oracledbdoc1}
+\end{itemize}
+
+Пример запроса (PostgreSQL, поиск процессов ожидающих блокировки):
+\begin{lstlisting}[language=SQL]
+    SELECT pid, relation::regclass AS locked_table, mode, granted
+    FROM pg_locks
+    WHERE NOT granted;              
+\end{lstlisting}
+
+Пример запроса (SQL Server, поиск взаимоблокировок):
+\begin{lstlisting}[language=SQL]
+    SELECT blocking_session_id AS blocker, session_id AS blocked
+    FROM sys.dm_exec_requests
+    WHERE blocking_session_id IS NOT NULL;             
+\end{lstlisting}
+
+Согласно требованиям ACID (Atomic, Consistent, Isolated, Durable) транзакция должна быть устойчивой. После своего завершения она сохраняется в системе, которую ничто не может вернуть в исходное (до начала транзакции) состояние, т. е. происходит фиксация транзакции (\texttt{COMMIT}), означающая, что ее действие постоянно даже при сбое системы. При выполнении отдельных операций транзакции могут быть нарушены какие-либо требования целостности данных (в первую очередь имеются в виду корпоративные правила целостности, см. главу 2). Однако по окончании выполнения транзакции (фиксация транзакции) все правила целостности базы данных будут соблюдены.
+
+В большинстве реляционных СУБД фиксация сначала записывает изменения в журнал транзакций (например, WAL или Binary Log), а затем применяет их к основным данным. Это позволяет минимизировать потери в случае сбоя и поддерживать \texttt{ROLLBACK}, если транзакция не была завершена.
+
+Транзакция начинается с первой команды, которая обращается к данным, и продолжается до тех пор, пока не будет явного завершения с помощью \texttt{COMMIT WORK} (или просто \texttt{COMMIT}) либо не будет закрыто соединение к базе данных. Ткаже возможно явное открытие транзакии с помощью \texttt{BEGIN TRANSACTION} (\texttt{START TRANSACTION} в MySQL). При выполнении \texttt{COMMIT} происходит фиксация транзакции, и \texttt{ROLLBACK} уже будет невозможен \autocite{Pirogov2009}. Однако поведение на самом деле зависит от СУБД.
+
+Например, в PostgreSQL и MySQL разрыв соединения без \texttt{COMMIT} приводит к автоматическому \texttt{ROLLBACK}, а в SQL Server и Oracle возможны различные настройки (по умолчанию транзакция фиксируется при разрыве соединение но можно включить поведение с откатом).
+
+Пример явного управления транзакцией в PostgreSQL (демонстрация атомарности транзакции при переводе средств между мнимымии счетами):
+\begin{lstlisting}[language=SQL]
+    BEGIN;
+    UPDATE accounts SET balance = balance - 100 WHERE id = 1;
+    UPDATE accounts SET balance = balance + 100 WHERE id = 2;
+    COMMIT;           
+\end{lstlisting}
 
 
 
@@ -461,25 +586,6 @@
     \item Привилегии и роли, предоставленные каждому пользователю;
     \item Другие общие сведения о базе данных.
 \end{itemize}
-
-\subsection{Понятие транзакции}
-
-\begin{grayquote}
-    Последовательность действий над данными, обрабатываемая СУБД как единая операция, будем называть \textbf{транзакцией}.
-\end{grayquote}
-
-Из определения ясно, что транзакция может состоять из одной или нескольких команд языка SQL. При этом команды языка SQL могут перемежаться командами, не выполняющими непосредственно операций над данными (не читающими данные, не изменяющими данные, не изменяющими структуру данных). Таким образом, в качестве транзакции может быть выбрана любая часть программы, содержащая команды чтения или записи данных. В частности, транзакция может состоять всего из одной команды, например INSERT, или из сотен команд, изменяющих или не изменяющих данные.
-
-
-Понятие транзакции чрезвычайно емкое. Оно в действительности тесно связано с концептуальной моделью данных и всей информационной системы. Дело в том, что на уровне пользователя операции над данными носят предметный характер: начислить зарплату, уволить работника, перевести деньги на другой счет и т. п. Для выполнения таких операций часто необходимо выполнить десятки, и даже сотни команд языка SQL. Однако вся эта последовательность команд должна быть подчинена одной цели: операция уровня пользователя должна быть обязательно выполнена. Что будет, если при выполнении такой цепочки команд произойдет сбой? Как рассматривать тогда выполняемую операцию — как частично выполненную? Но как в дальнейшем система узнает, что операция была только частично выполнена, и как ее закончить? Все эти вопросы, в конце концов, и приводят к понятию \textbf{"транзакция"} \autocite{Pirogov2009}.
-
-
-\paragraph{Фиксация транзакции} ~\\
-
-Согласно требованиям ACID (Atomic, Consistent, Isolated, Durable) транзакция должна быть устойчивой. После своего завершения она сохраняется в системе, которую ничто не может вернуть в исходное (до начала транзакции) состояние, т. е. происходит фиксация транзакции, означающая, что ее действие постоянно даже при сбое системы. При выполнении отдельных операций транзакции могут быть нарушены какие-либо требования целостности данных (в первую очередь имеются в виду корпоративные правила целостности, см. главу 2). Однако по окончании выполнения транзакции (фиксация транзакции) все правила целостности базы данных будут соблюдены. \\
-
-
-Согласно стандарту транзакция начинается с первой команды, которая обращается к данным. После этого транзакция продолжается до тех пор, пока не будет выполнена команда COMMIT WORK (или просто COMMIT) либо не будет закрыто соединение к базе данных. При выполнении команды COMMIT WORK происходит фиксация транзакции, другими словами, после этой команды откат транзакции уже будет невозможен \autocite{Pirogov2009}.
 
 
 \paragraph{Прокрутки вперед и назад} ~\\
