--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1244,6 +1244,11 @@
     url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverSysDymView,
+    title={Microsoft SQL Server. System dynamic management views},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/system-dynamic-management-views?view=sql-server-ver16}
+}
+
 @online{MicrosoftLearnSQLserverTab,
     title={Microsoft SQL Server. Tables},
     url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16}
