Added "3.2.4. Физическая структура словаря данных"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1184,6 +1184,11 @@
     url={https://www.postgresql.org/docs/current/wal.html}
 }
 
+@online{PostgreSQLdocc65,
+    title={PostgreSQL Documentation. Chapter 65. Database Physical Storage},
+    url={https://www.postgresql.org/docs/current/storage.html}
+}
+
 @online{PgStatStatements1,
     title={PostgreSQL Documentation. Appendix F. F.30.},
     url={https://www.postgresql.org/docs/current/pgstatstatements.html}
@@ -1209,9 +1214,9 @@
     url={https://dev.mysql.com/doc/refman/8.0/en/binary-log.html}
 }
 
-@online{OracleRedoLog,
-    title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
-    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
+@online{Mysqldoc4,
+    title={MySQL 8.0 Reference Manual. Chapter 17},
+    url={https://dev.mysql.com/doc/refman/8.0/en/innodb-storage-engine.html}
 }
 
 @online{YTcoursepostgre,
@@ -1274,6 +1279,36 @@
     url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverMasterdb,
+    title={Microsoft SQL Server. Master database},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/master-database?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverTempdb,
+    title={Microsoft SQL Server. tempdb database},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/tempdb-database?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverDBfiles,
+    title={Microsoft SQL Server. Database files and filegroups},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/database-files-and-filegroups?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverFileLoc,
+    title={Microsoft SQL Server. File locations..},
+    url={https://learn.microsoft.com/en-us/sql/sql-server/install/file-locations-for-default-and-named-instances-of-sql-server?view=sql-server-ver16}
+}
+
+@online{OracleRedoLog,
+    title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
+    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
+}
+
+@online{oracledbdoc0,
+    title={Oracle Database Reference. Part I Initialization Parameters},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/initialization-parameters-2.html}
+}
+
 @online{oracledbdoc1,
     title={Oracle Database Reference. Part II Static Data Dictionary Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/static-data-dictionary-views.html}
@@ -1287,6 +1322,11 @@
 @online{oracledbdoc3,
     title={Oracle Database Security Guide. Part II Managing Security for Oracle Database Users},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19}
+}
+
+@online{oracledbdoc4,
+    title={Oracle Database Installation Guide. Ch.9. Getting started with Oracle Database. Identifying Tablespaces and Data Files},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html}
 }
 
 @book{ElmasriNavathe,
