Added part of 3.3 "Блокировки и параллельный доступ"
Added two subsections of 3.3 "Блокировки и параллельный доступ":

Added 3.3.1 "Проблема параллельного доступа"

Aded 3.3.2 "Уровни изоляции транзакций"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1189,6 +1189,11 @@
     url={https://www.postgresql.org/docs/current/storage.html}
 }
 
+@online{PostgreSQLdocc13,
+    title={PostgreSQL Documentation. Chapter 13. Concurrency Control},
+    url={https://www.postgresql.org/docs/current/mvcc.html}
+}
+
 @online{PgStatStatements1,
     title={PostgreSQL Documentation. Appendix F. F.30.},
     url={https://www.postgresql.org/docs/current/pgstatstatements.html}
@@ -1299,6 +1304,11 @@
     url={https://learn.microsoft.com/en-us/sql/sql-server/install/file-locations-for-default-and-named-instances-of-sql-server?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverIsolation,
+    title={Microsoft SQL Server. Set transaction isolation},
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16}
+}
+
 @online{OracleRedoLog,
     title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
     url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
@@ -1327,6 +1337,11 @@
 @online{oracledbdoc4,
     title={Oracle Database Installation Guide. Ch.9. Getting started with Oracle Database. Identifying Tablespaces and Data Files},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html}
+}
+
+@online{oracledbdoc5,
+    title={Oracle Database Concepts. Part III. Oracle Transaction Management. Ch.9. Data Concurrency and Consistency},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C}
 }
 
 @book{ElmasriNavathe,
