Fix a typo, add a bit of info, update link for a source

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -776,8 +776,8 @@
 	author    = {Basta and Zgola},
 	publisher = {Cengage Learning},
 	year      = {2011},
-	url = {https://pdfcoffee.com/alfred-basta-melissa-zgola-database-security-cengage-learning-2011-pdf-pdf-free.html},
-	urldate = {2024-05-02}
+	url = {https://thelib.net/2198339-database-security.html},
+	urldate = {2025-03-16}
 }
 
 @online{InfoSecDBMS,
