--- a/part/concept.tex
+++ b/part/concept.tex
@@ -517,9 +517,10 @@
 Шифрование должно быть проверено как для хранящихся, так и для перемещаемых данных по БД. Примеры аудиторских проверок:
 
 \begin{enumerate}
-	\item Перемещаемые данные шифруются с использованием надежных методов шифрования
+	\item Хранимые и перемещаемые данные шифруются с использованием надежных методов шифрования
 	\item Для шифрования данных используются симметричные ключи
 	\item Шифрование настроено точно согласно политике
+	\item Чувствительные данные задокументированы и помечены как таковые
 \end{enumerate}
 
 \paragraph{Активность пользователей.}
